# hikarie-bot

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pip.conf  pyproject.toml  ruff.toml  setuptools
.clinerules/: ARCHITECTURE.md  CODE_STYLE.md  COMMIT_MESSAGE_TEMPLATE.txt  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  SCRIPTS_GUIDE.md  TODO_RULES.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/actions/setup-python-with-uv/: action.yml
.github/workflows/: docker.yml  release.yml  ruff.yml  test.yml
hikarie_bot/: __init__.py  __main__.py  _version.py  badges.py  build_modals.py  constants.py  curd.py  database.py  errors.py  exceptions.py  modals.py  models.py  schemas.py  settings.py  slack_components.py  slack_helper.py  utils.py
hikarie_bot/db_data/: __init__.py  badges.py
notebook/: run_app.ipynb  usage-image.ipynb
scripts/: add_version_file.sh  check_version_update.sh
tests/: __init__.py  conftest.py  test_app.py  test_badges.py  test_curd.py  test_database.py  test_main.py  test_modals.py  test_slack_helper.py  test_util.py
