[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "hikarie_bot"
version = "0.1.0"
description = "hikarie is GOD bot"
authors = [{ name = "Xilorole" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "aiohappyeyeballs",
    "aiohttp",
    "asyncclick",
    "click",
    "freezegun",
    "jpholiday",
    "loguru",
    "pydantic",
    "pytest-asyncio",
    "python-dotenv",
    "ruff",
    "slack-bolt",
    "sqlalchemy-utils",
    "sqlalchemy",
    "tzdata>=2025.2",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "jupyter",
    "pyright",
    "pytest-mock",
    "pytest-env",
    "matplotlib",
    "pre-commit-uv>=4.1.4",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = { attr = "hikarie_bot.version" }

[tool.setuptools_scm]
write_to = "hikarie_bot/_version.py"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
ENV = "test"
