[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "hikarie_bot"
version = "0.1.0"
description = "hikarie is GOD bot"
authors = [{ name = "Xilorole" }]
requires-python = ">=3.12"
readme = "README.md"


[dependency-groups]
core = [
    "aiohappyeyeballs",
    "aiohttp",
    "asyncclick",
    "click",
    "jpholiday",
    "loguru",
    "pydantic",
    "pytest-asyncio",
    "python-dotenv",
    "slack-bolt",
    "sqlalchemy-utils",
    "sqlalchemy",
    "tzdata>=2025.2",
]
dev = [
    "freezegun",
    "pytest",
    "pytest-xdist",
    "ruff",
    "pyright",
    "pytest-mock",
    "pytest-env",
    "pre-commit-uv>=4.1.4",
]
jupyter = [
    "jupyter",
    "matplotlib",
    "ing-theme-matplotlib",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = { attr = "hikarie_bot.version" }

[tool.setuptools_scm]
write_to = "hikarie_bot/_version.py"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
ENV = "test"

[tool.uv]
default-groups = ["core", "dev"]
